--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
+        <title>Mapping Musicals</title>
+        <meta name="description" content="A map of Tony winning and nominated musicals">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.42.1/mapbox-gl.js'></script>
 		<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.42.1/mapbox-gl.css' rel='stylesheet' />
         <link rel="manifest" href="site.webmanifest">
         <link rel="apple-touch-icon" href="icon.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="main.css">
@@ -22,7 +23,8 @@
         <!-- Add your site or application content here -->
         <header>
         	<h1>Mapping Musicals</h1>
-        	<p class="header-text">This project maps musicals that have won or have been nominated for best musical at the Tony awards by the location (sometimes approximate) or setting of the musical. Hover over the stars for more information!</p>
+        	<p class="header-text">This project maps musicals that have won or have been nominated for best musical at the Tony awards by the location (sometimes approximate) or setting of the musical. Hover over the stars or click the show title in the side bar for more information! View the code <a class="github-link" href="https://github.com/brittanyrw/mappingmusicals">on Github.</a></p>
+
         </header>
         <div class='sidebar'>
   			<div id='listings' class='listings'></div>
@@ -30,6 +32,7 @@
 		<div id='map' class='map'></div>
 
         <script src="app.js"></script>
+        <script src="https://use.fontawesome.com/e656f4498e.js" defer></script>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <script>
