update github link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Add your site or application content here -->
         <header>
         	<h1>Mapping Musicals</h1>
-        	<p class="header-text">This project maps musicals that have won or have been nominated for best musical at the Tony awards by the location (sometimes approximate) or setting of the musical. Hover over the stars or click the show title in the side bar for more information! View the code <a class="github-link" href="https://github.com/brittanyrw/mappingmusicals">on Github.</a></p>
+        	<p class="header-text">This project maps musicals that have won or have been nominated for best musical at the Tony awards by the location (sometimes approximate) or setting of the musical. Hover over the stars or click the show title in the side bar for more information! View the code <a class="github-link" href="https://github.com/brittanyrw/mappingmusicals" target="_blank">on Github.</a></p>
 
         </header>
         <div class='sidebar'>
