--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 
         </header>
         <div class='sidebar'>
-  			<div id='listings' class='listings'></div>
-		</div>
-		<div id='map' class='map'></div>
+		<input class="search" id='search' type='text' placeholder='Filter by Musical'/>
+  		<div id='listings' class='listings'></div>
+	</div>
+	<div id='map' class='map'></div>
 
         <script src="app.js"></script>
         <script src="https://use.fontawesome.com/e656f4498e.js" defer></script>
